footer added and brand-name overlapping fixed

--- a/naitikdiamondtools/basic_app/static/assets/css/new.css
+++ b/naitikdiamondtools/basic_app/static/assets/css/new.css
@@ -1,6 +1,7 @@
 
 #nav-logo{
   font-size: 30px;
+  margin-left: 50px;
 }
 
 
@@ -8,4 +9,5 @@
 @media (max-width: 776px) {
   #nav-logo {
     font-size: 20px;
+    margin-left:0px;
      } }
